# ignite_data

./: .gitignore  README.md  pyproject.toml
config/: ignite_data_assessment.yaml  local.env
docker/: docker-compose.yaml
src/assessment/: alembic.ini  main.py
src/assessment/alembic_migrations/: alembic.ini  env.py
src/assessment/config/: __init__.py  config.py  fastapi.py
src/assessment/migrations/: README.md
src/assessment/migrations/versions/: 1edec8450818_firstmigration.py  5ca44c30de37_add_frequency_in_medicationrequest.py  758190287fe6_addcodename_in_medication.py  cc2849ba90e4_addstatustomedicationrequest.py
src/assessment/models/: __init__.py  clinician.py  medication.py  medication_request.py  patient.py  sessionmaker.py
src/assessment/routes/: medication_request.py
src/assessment/schemas/: __init__.py  clinician_schema.py  medication_request_schema.py  medication_schema.py
src/assessment/services/: medication_request_service.py
src/assessment/services/base/: base_service.py
src/tests/: conftest.py  test_routes.py
