[tool.poetry]
name = "ignite-data-assessment"
version = "0.1.0"
description = ""
authors = ["Totoual <aristotelis@h2gopower.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
sqlalchemy = "^2.0.31"
aiosqlite = "^0.20.0"
asyncpg = "^0.29.0"
uvicorn = {extras = ["standard"], version = "^0.30.3"}


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.0"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
