[tool.poetry]
name = "assessment"
version = "0.1.0"
description = ""
authors = ["Totoual <aristotelis@h2gopower.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
sqlalchemy = "^2.0.31"
aiosqlite = "^0.20.0"
asyncpg = "^0.29.0"
uvicorn = {extras = ["standard"], version = "^0.30.3"}
dynaconf = "^3.2.6"
greenlet = "^3.0.3"
alembic = "^1.13.2"
coverage = "^7.6.0"
pytest-cov = "^5.0.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.0"
black = "^24.4.2"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
api = "assessment.main:main"

[tool.coverage.html]
directory = "cov_html"

[tool.coverage.run]
branch = true
concurrency = ["greenlet"]
source = ["src/assessment/", "src/tests/"]
omit = [
    ".*",
    "*/site-packages/*",
]

[tool.coverage.report]
fail_under = 60
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "def __str__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "if typing.TYPE_CHECKING:",
  "pass"
]